panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__initialisation__test_empty_braced_initialisation_of_static_variable.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/initialisation/test_empty_braced_initialisation_of_static_variable.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/test_empty_braced_initialisation_of_static_variable.c"
   (definition external x~0 `int` (braced ∅))
   (definition external xs~1 `array<array<int; 2>; 2>` (braced ∅))
   (function-definition external
      main~2 `fn() -> int`
      (compound-statement
         (return
            (bit-or `int`
               (bit-or `int`
                  (bit-or `int`
                     (bit-or `int` (x~0 `int`)
                        (deref `int`
                           (ptr-add `ptr<int>`
                              (noop-type-conversion `ptr<int>`
                                 (addressof `ptr<array<int; 2>>`
                                    (deref `array<int; 2>`
                                       (ptr-add `ptr<array<int; 2>>`
                                          (noop-type-conversion `ptr<array<int; 2>>`
                                             (addressof `ptr<array<array<int; 2>; 2>>`
                                                (xs~1 `array<array<int; 2>; 2>`)))
                                          (sign-extend `long` (0 `int`))))))
                              (sign-extend `long` (0 `int`)))))
                     (deref `int`
                        (ptr-add `ptr<int>`
                           (noop-type-conversion `ptr<int>`
                              (addressof `ptr<array<int; 2>>`
                                 (deref `array<int; 2>`
                                    (ptr-add `ptr<array<int; 2>>`
                                       (noop-type-conversion `ptr<array<int; 2>>`
                                          (addressof `ptr<array<array<int; 2>; 2>>`
                                             (xs~1 `array<array<int; 2>; 2>`)))
                                       (sign-extend `long` (0 `int`))))))
                           (sign-extend `long` (1 `int`)))))
                  (deref `int`
                     (ptr-add `ptr<int>`
                        (noop-type-conversion `ptr<int>`
                           (addressof `ptr<array<int; 2>>`
                              (deref `array<int; 2>`
                                 (ptr-add `ptr<array<int; 2>>`
                                    (noop-type-conversion `ptr<array<int; 2>>`
                                       (addressof `ptr<array<array<int; 2>; 2>>`
                                          (xs~1 `array<array<int; 2>; 2>`)))
                                    (sign-extend `long` (1 `int`))))))
                        (sign-extend `long` (0 `int`)))))
               (deref `int`
                  (ptr-add `ptr<int>`
                     (noop-type-conversion `ptr<int>`
                        (addressof `ptr<array<int; 2>>`
                           (deref `array<int; 2>`
                              (ptr-add `ptr<array<int; 2>>`
                                 (noop-type-conversion `ptr<array<int; 2>>`
                                    (addressof `ptr<array<array<int; 2>; 2>>`
                                       (xs~1 `array<array<int; 2>; 2>`)))
                                 (sign-extend `long` (1 `int`))))))
                     (sign-extend `long` (1 `int`)))))))))

----- stderr -----
